--- a/index.html
+++ b/index.html
@@ -13,8 +13,41 @@
 	</style> -->
 </head>
 <body>
+    <h2>Селекторы для выборки элемента</h2>
+
+    <pre>
+    	<code>
+    	body {
+		color: grey; 
+	}
+
+	.main-text {
+		color: red;
+	}
+
+	#text-in-p {
+		color: blue; 
+	}
+
+	div b, div i {
+		color: orange; 
+	}
+
+	/* div, .name-class, #id, div p {
+		color: brown; 
+	} */ 
+    	</code>
+    </pre>
+
 	<!-- <p style="color: blue"> -->
 	<p><b>Рыба-текст</b> используется для заполнения макета страницы или веб-сайта. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. Дизайнеры и типографы применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, <b>рыба-текст</b> не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления макета. Используя <b>рыбу</b>, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
+	<br>
+	<p id="text-in-p"><b class="main-text">Другая Рыба-текст</b> используется для заполнения <i>макета</i> страницы или <i>веб-сайта</i>. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. Дизайнеры и типографы применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, <b class="main-text">рыба-текст</b> не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления <i>макета</i>. Используя <b class="main-text">рыбу</b>, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
+	<br>
+	<div>
+	<p><b>Третья Рыба-текст</b> используется для заполнения макета страницы или веб-сайта. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. <i>Дизайнеры</i> и <i>типографы</i> применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, <b>рыба-текст</b> не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления <i>макета</i>. Используя <b>рыбу</b>, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
+	</div>
+</body>
 </body>
 </html>
 
