--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 	<div>
 	<p><b>Третья Рыба-текст</b> используется для заполнения макета страницы или веб-сайта. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. <i>Дизайнеры</i> и <i>типографы</i> применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, <b>рыба-текст</b> не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления <i>макета</i>. Используя <b>рыбу</b>, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
 	</div>
+
+	<h2>Псевдоклассы и псевдоэлементы</h2>
+
+	<a href="#" class="main_link">Эта ссылка ведёт в никуда...</a>
+
+	<p class="main_link"><b>А это четвёртая Рыба-текст</b> У этого текста такие же стили как и у ссылки "в никуда". Он используется для заполнения макета страницы или веб-сайта. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. <i>Дизайнеры</i> и <i>типографы</i> применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, <b>рыба-текст</b> не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления <i>макета</i>. Используя <b>рыбу</b>, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
 </body>
 </body>
 </html>
