--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h2>Селекторы для выборки элемента</h2>
+    <a href="second.html">Переход на Бобик и Батон</a>
 
     <pre>
     	<code>
