--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <h2>Селекторы для выборки элемента</h2>
-    <a href="second.html">Переход на Бобик и Батон</a>
+    <a href="second.html">Переход на Бобик и Батон</a><br>
+    <a href="third.html">Страница с фоновыми рисунками</a> 
 
     <pre>
     	<code>
