--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 	<p class="" title="Подсказка p:empty::after {}"></p>
 
 	<div id="some_id"><strong>Псевдоэлементы ::before, ::after</strong></div>
+
+	<h2>Стили для текста</h2>
+
+	<p class="main_text">Рыба-текст используется для заполнения макета страницы или веб-сайта. Его цель — продемонстрировать расположение элементов, не отвлекая внимание читателя на смысл текста. Дизайнеры и типографы применяют такой текст для проверки шрифтов, абзацев, интервалов и общего визуального восприятия. Как правило, рыба-текст не несёт никакой смысловой нагрузки и повторяется столько раз, сколько это необходимо для оформления макета. Используя рыбу, можно сосредоточиться исключительно на форме и структуре документа, а не на содержании.</p>
+
 </body>
 </body>
 </html>
