--- a/third.html
+++ b/third.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="css/third.css">
 </head>
 <body>
-<a href="index.html">На жабу обратно</a>
+
 <div id="first"></div>
-<div id="second"></div>
+<div id="second"><a href="index.html">На жабу обратно</a></div>
 
 </body>
 </html>
