--- a/second.html
+++ b/second.html
@@ -10,5 +10,10 @@
 	<div id="bobik" title="Великий Бобик Бобище!"></div>
 	<div id="baton" title="Великий Батон Батонище!"></div>
 
+<h2>Стили для блоков</h2>
+
+	<div class="block">Лимон</div>
+	<span class="block">Лимонище</span>
+
 </body>
 </html>
