--- a/second.html
+++ b/second.html
@@ -7,8 +7,12 @@
 <body>
 	<a href="index.html">На жабу обратно</a>
 
-	<div id="bobik" title="Великий Бобик Бобище!"></div>
+<div class="container">	
 	<div id="baton" title="Великий Батон Батонище!"></div>
+	<div id="bobik" title="Великий Бобик Бобище!"></div>
+</div>
+
+<hr>	
 
 <h2>Стили для блоков</h2>
 
