--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
 	<a href="index.html">На жабу обратно</a>
 
 <div class="container">	
-	<div id="baton" title="Великий Батон Батонище!"></div>
+	<div id="baton" title="Великий Батонище первый!"></div>
 	<div id="bobik" title="Великий Бобик Бобище!"></div>
 </div>
 
